--- a/06-Code/Unit 2/Liquor Store Project VS 2/src/ec/edu/espe/liquorStore/view/FrmOrder.form
+++ b/06-Code/Unit 2/Liquor Store Project VS 2/src/ec/edu/espe/liquorStore/view/FrmOrder.form
@@ -443,7 +443,7 @@
               <Group type="102" attributes="0">
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="1" attributes="0">
-                          <EmptySpace pref="16" max="32767" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
                           <Component id="jLabel15" min="-2" pref="164" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" attributes="0">
