Fix Logins and implements JSON Files

--- a/06-Code/Unit 2/Liquor Store Project VS 2/src/ec/edu/espe/liquorStore/view/FrmNewUser.form
+++ b/06-Code/Unit 2/Liquor Store Project VS 2/src/ec/edu/espe/liquorStore/view/FrmNewUser.form
@@ -79,8 +79,12 @@
       <SubComponents>
         <Component class="javax.swing.JTextField" name="txtNewUser">
           <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtNewUserActionPerformed"/>
             <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtNewUserKeyTyped"/>
           </Events>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
+          </AuxValues>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
@@ -105,6 +109,12 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JPasswordField" name="pswNewPassword">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="pswNewPasswordActionPerformed"/>
+          </Events>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
+          </AuxValues>
         </Component>
       </SubComponents>
     </Container>
